# unique-frontier

./: .gitignore  Cargo.dpp  Cargo.toml  a.txt  rust-toolchain.toml  spec-raw.json  spec.json
.maintain/node-template-release/: Cargo.toml
client/cli/: Cargo.toml
client/cli/src/frontier_db_cmd/: mod.rs
client/consensus/: Cargo.toml
client/consensus/src/: lib.rs
client/db/: Cargo.toml
client/db/src/: upgrade.rs
client/db/src/sql/: mod.rs
client/mapping-sync/: Cargo.toml
client/rpc/: Cargo.toml
client/rpc-core/: Cargo.toml
client/rpc-core/src/types/: transaction.rs  txpool.rs
client/rpc/src/: eth.rs  eth_pubsub.rs  lib.rs  net.rs  txpool.rs
client/rpc/src/eth/: block.rs  client.rs  execute.rs  fee.rs  filter.rs  mining.rs  mod.rs  pending.rs  state.rs  submit.rs  transaction.rs
client/rpc/src/overrides/: mod.rs  schema_v1_override.rs  schema_v2_override.rs  schema_v3_override.rs
client/storage/: Cargo.toml
client/storage/src/overrides/: mod.rs  schema_v1_override.rs  schema_v2_override.rs  schema_v3_override.rs
frame/base-fee/: Cargo.toml
frame/base-fee/src/: lib.rs  tests.rs
frame/common/: Cargo.toml
frame/common/src/: account.rs  lib.rs
frame/dynamic-fee/: Cargo.toml
frame/dynamic-fee/src/: lib.rs  tests.rs
frame/ethereum/: Cargo.toml
frame/ethereum/src/: lib.rs  mock.rs
frame/ethereum/src/tests/: eip1559.rs  eip2930.rs  legacy.rs  mod.rs
frame/evm/: Cargo.toml
frame/evm-chain-id/: Cargo.toml
frame/evm-mapping/: Cargo.toml
frame/evm/precompile/blake2/: Cargo.toml
frame/evm/precompile/blake2/src/: lib.rs
frame/evm/precompile/bls12377/: Cargo.toml
frame/evm/precompile/bls12381/: Cargo.toml
frame/evm/precompile/bn128/: Cargo.toml
frame/evm/precompile/bn128/src/: lib.rs
frame/evm/precompile/bw6761/: Cargo.toml
frame/evm/precompile/curve25519/: Cargo.toml
frame/evm/precompile/dispatch/: Cargo.toml
frame/evm/precompile/dispatch/src/: lib.rs  mock.rs
frame/evm/precompile/ed25519/: Cargo.toml
frame/evm/precompile/modexp/: Cargo.toml
frame/evm/precompile/modexp/src/: lib.rs
frame/evm/precompile/sha3fips/: Cargo.toml
frame/evm/precompile/simple/: Cargo.toml
frame/evm/precompile/storage-cleaner/: Cargo.toml
frame/evm/precompile/storage-cleaner/src/: mock.rs
frame/evm/src/: account.rs  benchmarking.rs  lib.rs  mock.rs  tests.rs
frame/evm/src/runner/: mod.rs  stack.rs
frame/evm/test-vector-support/: Cargo.toml
frame/evm/test-vector-support/src/: lib.rs
frame/hotfix-sufficients/: Cargo.toml
frame/hotfix-sufficients/src/: mock.rs  tests.rs  weights.rs
precompiles/: Cargo.toml
precompiles/macro/: Cargo.toml
precompiles/src/: substrate.rs
precompiles/src/solidity/codec/: mod.rs  native.rs  xcm.rs
precompiles/tests-external/: lib.rs
primitives/account/: Cargo.toml
primitives/consensus/: Cargo.toml
primitives/dynamic-fee/: Cargo.toml
primitives/ethereum/: Cargo.toml
primitives/ethereum/src/: lib.rs
primitives/evm/: Cargo.toml
primitives/evm/src/: account_provider.rs  lib.rs  precompile.rs  validation.rs
primitives/rpc/: Cargo.toml
primitives/rpc/src/: lib.rs
primitives/self-contained/: Cargo.toml
primitives/self-contained/src/: checked_extrinsic.rs  lib.rs  unchecked_extrinsic.rs
primitives/storage/: Cargo.toml
template/node/: Cargo.toml
template/node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  command_helper.rs  rpc.rs  service.rs
template/node/src/rpc/: eth.rs  mod.rs
template/runtime/: Cargo.toml
template/runtime/src/: lib.rs
