[workspace]
members = [
	"frame/base-fee",
	"frame/dynamic-fee",
	"frame/ethereum",
	"frame/evm",
	"frame/evm/precompile/sha3fips",
	"frame/evm/precompile/simple",
	"frame/evm/precompile/modexp",
	"frame/evm/precompile/ed25519",
	"frame/evm/precompile/bn128",
	"frame/evm/precompile/blake2",
	"frame/evm/precompile/dispatch",
	"frame/evm/precompile/curve25519",
	"frame/evm-mapping",
	"client/consensus",
	"client/rpc-core",
	"client/rpc",
	"client/db",
	"client/mapping-sync",
	"primitives/consensus",
	"primitives/dynamic-fee",
	"primitives/evm",
	"primitives/rpc",
	"primitives/self-contained",
	"template/node",
	"template/runtime",
]
resolver = "2"

[patch]

[patch.crates-io]
evm = { git = "https://github.com//uniquenetwork/evm", branch = "unique-polkadot-v0.9.19" }

[patch."https://github.com/paritytech/substrate"]
frame-benchmarking = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
frame-benchmarking-cli = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
frame-executive = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
frame-support = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
frame-system = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
frame-system-benchmarking = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
frame-system-rpc-runtime-api = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-aura = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-balances = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-grandpa = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-randomness-collective-flip = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-sudo = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-timestamp = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-transaction-payment = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-transaction-payment-rpc = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-basic-authorship = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-cli = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-client-api = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-consensus = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-consensus-aura = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-consensus-manual-seal = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-executor = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-finality-grandpa = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-keystore = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-network = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-rpc = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-rpc-api = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-service = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-telemetry = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-transaction-pool = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-transaction-pool-api = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-api = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-block-builder = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-blockchain = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-consensus = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-consensus-aura = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-core = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-database = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-debug-derive = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-finality-grandpa = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-inherents = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-io = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-offchain = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-runtime = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-session = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-std = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-storage = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-timestamp = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-transaction-pool = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-version = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
substrate-build-script-utils = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
substrate-frame-rpc-system = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
substrate-wasm-builder = { git = "https://github.com//paritytech/substrate", branch = "polkadot-v0.9.19" }
