[workspace]
members = [
	"frame/base-fee",
	"frame/dynamic-fee",
	"frame/ethereum",
	"frame/evm",
	"frame/evm-chain-id",
	"frame/hotfix-sufficients",
	"frame/evm/precompile/sha3fips",
	"frame/evm/precompile/simple",
	"frame/evm/precompile/modexp",
	"frame/evm/precompile/ed25519",
	"frame/evm/precompile/bn128",
	"frame/evm/precompile/blake2",
	"frame/evm/precompile/dispatch",
	"frame/evm/precompile/curve25519",
	"frame/evm-mapping",
	"client/consensus",
	"client/rpc-core",
	"client/rpc",
	"client/db",
	"client/storage",
	"client/mapping-sync",
	"primitives/consensus",
	"primitives/dynamic-fee",
	"primitives/evm",
	"primitives/rpc",
	"primitives/self-contained",
	"template/node",
	"template/runtime",
]
resolver = "2"

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/frontier/"

[workspace.dependencies]
bn = { package = "substrate-bn", version = "0.6", default-features = false }
environmental = { version = "1.1.3", default-features = false }
ethereum = { version = "0.14.0", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false }
evm = { version = "0.37.0", default-features = false }
jsonrpsee = "0.16.2"
kvdb-rocksdb = "0.17.0"
libsecp256k1 = "0.7.1"
parity-db = "0.4.2"
rlp = { version = "0.5", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
serde = { default-features = false, version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Substrate Client
sc-basic-authorship = { branch = "polkadot-v0.9.39", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sc-block-builder = { branch = "polkadot-v0.9.39", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sc-cli = { branch = "polkadot-v0.9.39", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sc-client-api = { branch = "polkadot-v0.9.39", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sc-client-db = { branch = "polkadot-v0.9.39", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sc-consensus = { branch = "polkadot-v0.9.39", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sc-consensus-aura = { branch = "polkadot-v0.9.39", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sc-consensus-manual-seal = { branch = "polkadot-v0.9.39", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sc-executor = { branch = "polkadot-v0.9.39", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa = { branch = "polkadot-v0.9.39", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sc-keystore = { branch = "polkadot-v0.9.39", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sc-network = { branch = "polkadot-v0.9.39", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sc-network-common = { branch = "polkadot-v0.9.39", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sc-rpc = { branch = "polkadot-v0.9.39", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sc-rpc-api = { branch = "polkadot-v0.9.39", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sc-service = { branch = "polkadot-v0.9.39", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sc-telemetry = { branch = "polkadot-v0.9.39", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = { branch = "polkadot-v0.9.39", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sc-transaction-pool-api = { branch = "polkadot-v0.9.39", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
# Substrate Primitive
sp-api = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sp-block-builder = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sp-blockchain = { branch = "polkadot-v0.9.39", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sp-consensus = { branch = "polkadot-v0.9.39", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sp-consensus-aura = { branch = "polkadot-v0.9.39", default-features = false , version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sp-core = { branch = "polkadot-v0.9.39", default-features = false , version = "7.0.0", git = "https://github.com/paritytech/substrate" }
sp-database = { branch = "polkadot-v0.9.39", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sp-finality-grandpa = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sp-inherents = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sp-io = { branch = "polkadot-v0.9.39", default-features = false , version = "7.0.0", git = "https://github.com/paritytech/substrate" }
sp-keyring = { branch = "polkadot-v0.9.39", version = "7.0.0", git = "https://github.com/paritytech/substrate" }
sp-offchain = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.39", default-features = false , version = "7.0.0", git = "https://github.com/paritytech/substrate" }
sp-session = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sp-state-machine = { branch = "polkadot-v0.9.39", default-features = false , version = "0.13.0", git = "https://github.com/paritytech/substrate" }
sp-std = { branch = "polkadot-v0.9.39", default-features = false , version = "5.0.0", git = "https://github.com/paritytech/substrate" }
sp-storage = { branch = "polkadot-v0.9.39", default-features = false , version = "7.0.0", git = "https://github.com/paritytech/substrate" }
sp-timestamp = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sp-trie = { branch = "polkadot-v0.9.39", default-features = false , version = "7.0.0", git = "https://github.com/paritytech/substrate" }
sp-version = { branch = "polkadot-v0.9.39", default-features = false , version = "5.0.0", git = "https://github.com/paritytech/substrate" }
# Substrate FRAME
frame-benchmarking = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
frame-executive = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
frame-support = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
frame-system = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
frame-system-benchmarking = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
frame-system-rpc-runtime-api = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
pallet-aura = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
pallet-balances = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
pallet-grandpa = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
pallet-sudo = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc = { branch = "polkadot-v0.9.39", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc-runtime-api = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
pallet-utility = { branch = "polkadot-v0.9.39", default-features = false , version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
# Substrate Utility
frame-benchmarking-cli = { branch = "polkadot-v0.9.39", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", branch = "polkadot-v0.9.39", git = "https://github.com/paritytech/substrate" }
substrate-build-script-utils = { branch = "polkadot-v0.9.39", version = "3.0.0", git = "https://github.com/paritytech/substrate" }
substrate-frame-rpc-system = { branch = "polkadot-v0.9.39", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
substrate-test-runtime-client = { branch = "polkadot-v0.9.39", version = "2.0.0", git = "https://github.com/paritytech/substrate" }
substrate-wasm-builder = { branch = "polkadot-v0.9.39", version = "5.0.0-dev", git = "https://github.com/paritytech/substrate" }
# Frontier Client
fc-cli = { version = "1.0.0-dev", path = "client/cli" }
fc-consensus = { version = "2.0.0-dev", path = "client/consensus" }
fc-db = { version = "2.0.0-dev", path = "client/db" }
fc-mapping-sync = { version = "2.0.0-dev", path = "client/mapping-sync" }
fc-rpc = { version = "2.0.0-dev", path = "client/rpc" }
fc-rpc-core = { version = "1.1.0-dev", path = "client/rpc-core" }
fc-storage = { version = "1.0.0-dev", path = "client/storage" }
# Frontier Primitive
fp-consensus = { version = "2.0.0-dev", path = "primitives/consensus", default-features = false }
fp-dynamic-fee = { version = "1.0.0", path = "primitives/dynamic-fee", default-features = false }
fp-ethereum = { version = "1.0.0-dev", path = "primitives/ethereum", default-features = false }
fp-evm = { version = "3.0.0-dev", path = "primitives/evm", default-features = false }
fp-rpc = { version = "3.0.0-dev", path = "primitives/rpc", default-features = false }
fp-self-contained = { version = "1.0.0-dev", path = "primitives/self-contained", default-features = false }
fp-storage = { version = "2.0.0", path = "primitives/storage", default-features = false }
# Frontier FRAME
pallet-base-fee = { version = "1.0.0", path = "frame/base-fee", default-features = false }
pallet-dynamic-fee = { version = "4.0.0-dev", path = "frame/dynamic-fee", default-features = false }
pallet-ethereum = { version = "4.0.0-dev", path = "frame/ethereum", default-features = false }
pallet-evm = { version = "6.0.0-dev", path = "frame/evm", default-features = false }
pallet-evm-chain-id = { version = "1.0.0-dev", path = "frame/evm-chain-id", default-features = false }
pallet-evm-precompile-modexp = { version = "2.0.0-dev", path = "frame/evm/precompile/modexp", default-features = false }
pallet-evm-precompile-sha3fips = { version = "2.0.0-dev", path = "frame/evm/precompile/sha3fips", default-features = false }
pallet-evm-precompile-simple = { version = "2.0.0-dev", path = "frame/evm/precompile/simple", default-features = false }
pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "frame/evm/test-vector-support" }
pallet-hotfix-sufficients = { version = "1.0.0", path = "frame/hotfix-sufficients", default-features = false }
# Frontier Template
frontier-template-runtime = { path = "template/runtime", default-features = false }
# Unique
fp-evm-mapping = { path = "frame/evm-mapping", default-features = false }

[workspace.metadata.deppatcher.originals.workspace.dependencies]
substrate-prometheus-endpoint = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-block-builder = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-db = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-manual-seal = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network-common = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-database = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-offchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-session = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-state-machine = { version = "0.13.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-std = { version = "5.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-storage = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-trie = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-version = { version = "5.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
frame-executive = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
frame-system-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-aura = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-sudo = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-utility = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-test-runtime-client = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
