[workspace]
members = [
	"frame/base-fee",
	"frame/dynamic-fee",
	"frame/ethereum",
	"frame/evm",
	"frame/evm/precompile/sha3fips",
	"frame/evm/precompile/simple",
	"frame/evm/precompile/modexp",
	"frame/evm/precompile/ed25519",
	"frame/evm/precompile/bn128",
	"frame/evm/precompile/blake2",
	"frame/evm/precompile/bw6761",
	"frame/evm/precompile/bls12377",
	"frame/evm/precompile/bls12381",
	"frame/evm/precompile/dispatch",
	"frame/evm/precompile/curve25519",
	"frame/evm/precompile/storage-cleaner",
	"frame/evm-chain-id",
	"frame/hotfix-sufficients",
	"client/api",
	"client/consensus",
	"client/rpc-core",
	"client/rpc",
	"client/db",
	"client/storage",
	"client/mapping-sync",
	"primitives/account",
	"primitives/consensus",
	"primitives/dynamic-fee",
	"primitives/evm",
	"primitives/rpc",
	"primitives/self-contained",
	"template/node",
	"template/runtime",
	"precompiles",
	"precompiles/macro",
	"precompiles/tests-external",
]
resolver = "2"

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/frontier/"

[workspace.dependencies]
async-trait = "0.1"
bn = { package = "substrate-bn", version = "0.6", default-features = false }
clap = { version = "4.5", features = ["derive", "deprecated"] }
derive_more = "0.99"
environmental = { version = "1.1.4", default-features = false }
ethereum = { version = "0.15.0", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false }
evm = { version = "0.41.1", default-features = false }
futures = "0.3.30"
hash-db = { version = "0.16.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = "0.4.1"
impl-serde = { version = "0.4.0", default-features = false }
impl-trait-for-tuples = "0.2.1"
jsonrpsee = "0.22.5"
kvdb-rocksdb = "0.19.0"
libsecp256k1 = { version = "0.7.1", default-features = false }
log = { version = "0.4.21", default-features = false }
num_enum = { version = "0.7.2", default-features = false }
parity-db = "0.4.13"
parking_lot = "0.12.2"
rlp = { version = "0.5.2", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"
similar-asserts = "1.5.0"
sqlx = { version = "0.7.4", default-features = false, features = ["macros"] }
thiserror = "1.0"
tokio = "1.37.0"

# Substrate Client
sc-basic-authorship = "0.40.0"
sc-block-builder = "0.39.0"
sc-chain-spec = "33.0.0"
sc-cli = { default-features = false , version = "0.42.0" }
sc-client-api = "34.0.0"
sc-client-db = { default-features = false , version = "0.41.0" }
sc-consensus = "0.39.1"
sc-consensus-aura = "0.40.0"
sc-consensus-grandpa = "0.25.0"
sc-consensus-manual-seal = "0.41.0"
sc-executor = "0.38.0"
sc-keystore = "31.0.0"
sc-network = "0.40.0"
sc-network-common = "0.39.0"
sc-network-sync = "0.39.0"
sc-offchain = "35.0.0"
sc-rpc = "35.0.0"
sc-rpc-api = "0.39.0"
sc-service = { default-features = false , version = "0.41.0" }
sc-telemetry = "20.0.0"
sc-transaction-pool = "34.0.0"
sc-transaction-pool-api = "34.0.0"
sc-utils = "17.0.0"
# Substrate Primitive
sp-api = { default-features = false , version = "32.0.0" }
sp-block-builder = { default-features = false , version = "32.0.0" }
sp-blockchain = "34.0.0"
sp-consensus = "0.38.0"
sp-consensus-aura = { default-features = false , version = "0.38.0" }
sp-consensus-grandpa = { default-features = false , version = "19.0.0" }
sp-core = { default-features = false , version = "33.0.1" }
sp-crypto-hashing = { default-features = false , version = "0.1.0" }
sp-database = "10.0.0"
sp-externalities = { default-features = false , version = "0.28.0" }
sp-genesis-builder = { default-features = false , version = "0.13.0" }
sp-inherents = { default-features = false , version = "32.0.0" }
sp-io = { default-features = false , version = "36.0.0" }
sp-keyring = "37.0.0"
sp-offchain = { default-features = false , version = "32.0.0" }
sp-runtime = { default-features = false , version = "37.0.0" }
sp-runtime-interface = { default-features = false , version = "27.0.0" }
sp-session = { default-features = false , version = "33.0.0" }
sp-state-machine = { default-features = false , version = "0.41.0" }
sp-std = { default-features = false , version = "14.0.0" }
sp-storage = { default-features = false , version = "21.0.0" }
sp-timestamp = { default-features = false , version = "32.0.0" }
sp-transaction-pool = { default-features = false , version = "32.0.0" }
sp-version = { default-features = false , version = "35.0.0" }
sp-weights = { default-features = false , version = "31.0.0" }
# Substrate FRAME 
frame-benchmarking = { default-features = false , version = "34.0.0" }
frame-executive = { default-features = false , version = "34.0.0" }
frame-support = { default-features = false , version = "34.0.0" }
frame-system = { default-features = false , version = "34.0.1" }
frame-system-benchmarking = { default-features = false , version = "34.0.0" }
frame-system-rpc-runtime-api = { default-features = false , version = "32.0.0" }
pallet-aura = { default-features = false , version = "33.0.0" }
pallet-balances = { default-features = false , version = "35.0.0" }
pallet-grandpa = { default-features = false , version = "34.0.0" }
pallet-sudo = { default-features = false , version = "34.0.0" }
pallet-timestamp = { default-features = false , version = "33.0.0" }
pallet-transaction-payment = { default-features = false , version = "34.0.0" }
pallet-transaction-payment-rpc = "36.0.0"
pallet-transaction-payment-rpc-runtime-api = { default-features = false , version = "34.0.0" }
pallet-utility = { default-features = false , version = "34.0.0" }
# Substrate Utility
frame-benchmarking-cli = "38.0.0"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.17.0" }
substrate-build-script-utils = "11.0.0"
substrate-frame-rpc-system = "34.0.0"
substrate-test-runtime-client = "0.1.0"
substrate-wasm-builder = "22.0.0"

# XCM
xcm = { package = "staging-xcm", default-features = false , version = "13.0.1" }

# Arkworks
ark-bls12-377 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bw6-761 = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }

# Frontier Client
fc-api = { path = "client/api" }
fc-cli = { path = "client/cli", default-features = false }
fc-consensus = { path = "client/consensus" }
fc-db = { path = "client/db", default-features = false }
fc-mapping-sync = { path = "client/mapping-sync", default-features = false }
fc-rpc = { path = "client/rpc", default-features = false }
fc-rpc-core = { path = "client/rpc-core" }
fc-storage = { path = "client/storage" }
# Frontier Primitive
fp-account = { path = "primitives/account", default-features = false }
fp-consensus = { path = "primitives/consensus", default-features = false }
fp-dynamic-fee = { path = "primitives/dynamic-fee", default-features = false }
fp-ethereum = { path = "primitives/ethereum", default-features = false }
fp-evm = { path = "primitives/evm", default-features = false }
fp-rpc = { path = "primitives/rpc", default-features = false }
fp-self-contained = { path = "primitives/self-contained", default-features = false }
fp-storage = { path = "primitives/storage", default-features = false }
# Frontier FRAME
pallet-base-fee = { path = "frame/base-fee", default-features = false }
pallet-dynamic-fee = { path = "frame/dynamic-fee", default-features = false }
pallet-ethereum = { path = "frame/ethereum", default-features = false }
pallet-evm = { path = "frame/evm", default-features = false }
pallet-evm-chain-id = { path = "frame/evm-chain-id", default-features = false }
pallet-evm-precompile-modexp = { path = "frame/evm/precompile/modexp", default-features = false }
pallet-evm-precompile-sha3fips = { path = "frame/evm/precompile/sha3fips", default-features = false }
pallet-evm-precompile-simple = { path = "frame/evm/precompile/simple", default-features = false }
pallet-evm-test-vector-support = { path = "frame/evm/test-vector-support" }
pallet-hotfix-sufficients = { path = "frame/hotfix-sufficients", default-features = false }
# Frontier Utility
precompile-utils = { path = "precompiles", default-features = false }
# Frontier Template
frontier-template-runtime = { path = "template/runtime", default-features = false }

[workspace.metadata.deppatcher.originals.workspace.dependencies]
substrate-prometheus-endpoint = { version = "0.17.0" }
staging-xcm = { version = "13.0.1" }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
# Sacrifice compile speed for execution speed by using optimization flags:
# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
