[package]
name = "fc-consensus"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier consensus for substrate"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[package.metadata.deppatcher.originals.dependencies]
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }

[dependencies]
async-trait = "0.1"
thiserror = "1.0"

sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", version = "4.0.0-dev" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", version = "0.10.0-dev" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", version = "4.0.0-dev" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", version = "4.0.0-dev" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", version = "4.0.0-dev" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", version = "0.10.0-dev" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", version = "6.0.0" }

fc-db = { version = "2.0.0-dev", path = "../db" }
fp-consensus = { version = "2.0.0-dev", path = "../../primitives/consensus" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
