[package]
name = "fc-rpc"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
ethereum = { version = "0.12.0", features = ["with-codec"] }
ethereum-types = "0.13.1"
evm = { default-features = false, features = ["with-codec"] , git = "https://github.com/uniquenetwork/evm", branch = "unique-polkadot-v0.9.19" }
futures = { version = "0.3.1", features = ["compat"] }
hex = "0.4"
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"
jsonrpc-pubsub = "18.0"
libsecp256k1 = "0.7"
log = "0.4.8"
lru = "0.6.6"
rand = "0.8"
rlp = "0.5"
tokio = { version = "1.14", features = ["sync"] }

codec = { package = "parity-scale-codec", version = "3.0.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", version = "4.0.0-dev" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", version = "0.10.0-dev" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", version = "4.0.0-dev" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", version = "0.10.0-dev" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", version = "4.0.0-dev" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", version = "4.0.0-dev" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", version = "4.0.0-dev" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", version = "4.0.0-dev" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", version = "4.0.0-dev" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", version = "6.0.0" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", version = "6.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", version = "6.0.0" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", version = "6.0.0" }

fc-db = { version = "2.0.0-dev", path = "../db" }
fc-rpc-core = { version = "1.1.0-dev", path = "../rpc-core" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage" }

[features]
rpc_binary_search_estimate = []
